# vpn-swapper

./: .flake8  .gitignore  LICENSE  README.md  config.json.example  pyproject.toml
infra/: main.tf  variables.tf
infra/templates/: user-data.sh
test/: test_data.py  test_ec2.py  test_helpers.py
test/fixtures/: instances.json
vpn_swapper/: __main__.py  aws.py  config.py  error.py  log.py  vpn_host.py  wg_conf.py
