[tool.poetry]
name = "vpn-swapper"
version = "0.1.0"
description = "A tool to easily rotate VPN connections"
authors = ["Workday Security Engineering"]
license = "????"

[tool.poetry.dependencies]
python = "^3.7"
boto3 = "*"
paramiko = "*"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
